force-app/main/default/objects/Opportunity/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prestataire B2B</fullName>
            </value>
            <value>
                <fullName>Prestataire B2C</fullName>
            </value>
            <value>
                <fullName>Startup</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>HCR</fullName>
            </value>
            <value>
                <fullName>BTP</fullName>
            </value>
            <value>
                <fullName>Immobilier</fullName>
            </value>
            <value>
                <fullName>LMNP</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Agricole</fullName>
            </value>
            <value>
                <fullName>Industrie</fullName>
            </value>
            <value>
                <fullName>Production/Artiste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>