force-app/main/default/objects/Opportunity/fields/ActivityArea__c.field-meta.xml
<CustomField>
    <fullName>ActivityArea__c</fullName>
    <label>Secteur d&#39;activité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cible : B2B avec salariés</fullName>
            </value>
            <value>
                <fullName>Cible : B2B sans salariés</fullName>
            </value>
            <value>
                <fullName>Cible : B2C Tiimer</fullName>
            </value>
            <value>
                <fullName>Cible :Médical</fullName>
                <label>Cible : Médical</label>
            </value>
            <value>
                <fullName>Cible : Production / Artiste</fullName>
            </value>
            <value>
                <fullName>Hors cible : Agricole</fullName>
            </value>
            <value>
                <fullName>Hors cible : B2C Autres</fullName>
            </value>
            <value>
                <fullName>Hors cible : BTP</fullName>
            </value>
            <value>
                <fullName>Hors cible : Commerce</fullName>
            </value>
            <value>
                <fullName>Hors cible : E-Commerce</fullName>
            </value>
            <value>
                <fullName>Hors cible : Immobilier</fullName>
            </value>
            <value>
                <fullName>Hors cible : Industrie</fullName>
            </value>
            <value>
                <fullName>Hors cible : Startup</fullName>
            </value>
            <value>
                <fullName>Hors cible : Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>