force-app/main/default/objects/Opportunity/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Adresse</label>
    <length>80</length>
    <type>Text</type>
</CustomField>