force-app/main/default/objects/Opportunity/fields/ContactSourceSPE__c.field-meta.xml
<CustomField>
    <fullName>ContactSourceSPE__c</fullName>
    <label>Contact Source SPE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>