force-app/main/default/objects/Opportunity/fields/HowDoYouKnowUs__c.field-meta.xml
<CustomField>
    <fullName>HowDoYouKnowUs__c</fullName>
    <label>Comment nous avez-vous connu ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>