force-app/main/default/objects/Opportunity/fields/InternalCompany__c.field-meta.xml
<CustomField>
    <fullName>InternalCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Société interne qui va facturer l&#39;opportunité</description>
    <label>Société interne</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Société Interne</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>InternalCompanies</relationshipName>
    <type>Lookup</type>
</CustomField>