force-app/main/default/objects/Opportunity/fields/LeadFullName__c.field-meta.xml
<CustomField>
    <fullName>LeadFullName__c</fullName>
    <label>Nom de la Lead</label>
    <length>100</length>
    <type>Text</type>
</CustomField>