force-app/main/default/objects/Opportunity/fields/LossReason__c.field-meta.xml
<CustomField>
    <fullName>LossReason__c</fullName>
    <label>Motif de la perte</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Projet trop en amont</fullName>
            </value>
            <value>
                <fullName>Concurrence</fullName>
            </value>
            <value>
                <fullName>Injoignable suite à rdv manqué</fullName>
            </value>
            <value>
                <fullName>Injoignable suite à envoi de la proposition</fullName>
            </value>
            <value>
                <fullName>Prix</fullName>
            </value>
            <value>
                <fullName>Proximité souhaitée</fullName>
            </value>
            <value>
                <fullName>Hors zone géographique</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
                <isActive>false</isActive>
                <label>Lost to Competitor</label>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
                <isActive>false</isActive>
                <label>No Budget / Lost Funding</label>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
                <isActive>false</isActive>
                <label>No Decision / Non-Responsive</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Price</fullName>
                <isActive>false</isActive>
                <label>Price</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>