force-app/main/default/objects/Opportunity/fields/MailAddress__c.field-meta.xml
<CustomField>
    <fullName>MailAddress__c</fullName>
    <label>Adresse e-mail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>