force-app/main/default/objects/Opportunity/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>Téléphone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>