force-app/main/default/objects/Opportunity/fields/NurturingComments__c.field-meta.xml
<CustomField>
    <fullName>NurturingComments__c</fullName>
    <label>Commentaire Nurturing</label>
    <type>TextArea</type>
</CustomField>