force-app/main/default/objects/Opportunity/fields/NurturingScenario__c.field-meta.xml
<CustomField>
    <fullName>NurturingScenario__c</fullName>
    <label>Scénario Nurturing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Se renseigne, réfléchit</fullName>
            </value>
            <value>
                <fullName>recherche locaux/domiciliation</fullName>
            </value>
            <value>
                <fullName>attente financement</fullName>
            </value>
            <value>
                <fullName>attente rupture conv/inscription PE</fullName>
            </value>
            <value>
                <fullName>attente diplôme/formation</fullName>
            </value>
            <value>
                <fullName>attente liquidation retraite</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>