force-app/main/default/objects/Opportunity/fields/OpportunityLossDetails__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLossDetails__c</fullName>
    <label>Détails sur le motif de la perte</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>