force-app/main/default/objects/Opportunity/fields/OpportunityRating__c.field-meta.xml
<CustomField>
    <fullName>OpportunityRating__c</fullName>
    <description>Ce champ sert à évaluer la possibilité de gagner cette opportunité</description>
    <label>Évaluation de l&#39;opportunité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Froid</fullName>
            </value>
            <value>
                <fullName>Tiède</fullName>
            </value>
            <value>
                <fullName>Chaud</fullName>
            </value>
            <value>
                <fullName>Ne sais pas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>