force-app/main/default/objects/Opportunity/fields/OpportunitySource__c.field-meta.xml
<CustomField>
    <fullName>OpportunitySource__c</fullName>
    <label>Catégorie de la source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renommée</fullName>
            </value>
            <value>
                <fullName>Recommandation client</fullName>
            </value>
            <value>
                <fullName>Recommandation Partenaire</fullName>
            </value>
            <value>
                <fullName>Payant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>