force-app/main/default/objects/Opportunity/fields/ParentOpportunity__c.field-meta.xml
<CustomField>
    <fullName>ParentOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunité parente</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunit_s</relationshipName>
    <type>Lookup</type>
</CustomField>