force-app/main/default/objects/Opportunity/fields/ProspectActivityDetails__c.field-meta.xml
<CustomField>
    <fullName>ProspectActivityDetails__c</fullName>
    <label>Détail sur l&#39;activité du prospect</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>