force-app/main/default/objects/Opportunity/fields/Salescomments__c.field-meta.xml
<CustomField>
    <fullName>Salescomments__c</fullName>
    <label>Commentaire TMC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>