force-app/main/default/objects/Opportunity/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposition envoyée</fullName>
                <default>true</default>
                <label>Proposition envoyée</label>
            </value>
            <value>
                <fullName>Relance</fullName>
            </value>
            <value>
                <fullName>Nurtering</fullName>
            </value>
            <value>
                <fullName>Signée</fullName>
            </value>
            <value>
                <fullName>Perdue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>