force-app/main/default/objects/Opportunity/fields/SubscriptionStartDate__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionStartDate__c</fullName>
    <label>Début d&#39;abonnement</label>
    <type>Date</type>
</CustomField>