force-app/main/default/objects/Opportunity/fields/TEMP_convertOpp__c.field-meta.xml
<CustomField>
    <fullName>TEMP_convertOpp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TEMP_convertOpp</label>
    <type>Checkbox</type>
</CustomField>