force-app/main/default/objects/Opportunity/recordTypes/Insurance.recordType-meta.xml
<RecordType>
    <fullName>Insurance</fullName>
    <active>true</active>
    <businessProcess>Process de base TIIME</businessProcess>
    <label>Assurance</label>
</RecordType>