force-app/main/default/objects/Opportunity/recordTypes/Legal.recordType-meta.xml
<RecordType>
    <fullName>Legal</fullName>
    <active>true</active>
    <businessProcess>Process de base TIIME</businessProcess>
    <label>Juridique</label>
</RecordType>