force-app/main/default/objects/Opportunity/recordTypes/Primary.recordType-meta.xml
<RecordType>
    <fullName>Primary</fullName>
    <active>true</active>
    <businessProcess>Process de base TIIME</businessProcess>
    <label>Principale</label>
</RecordType>