force-app/main/default/objects/Opportunity/recordTypes/Social.recordType-meta.xml
<RecordType>
    <fullName>Social</fullName>
    <active>true</active>
    <businessProcess>Process de base TIIME</businessProcess>
    <label>Sociale</label>
</RecordType>