force-app/main/default/objects/Opportunity/validationRules/LossReasonRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>LossReasonRequired</fullName>
    <active>true</active>
    <description>Obligation de remplir un motif de perte si le statut de l&#39;opportunité est &quot;perdu&quot;.</description>
    <errorConditionFormula>AND(
$User.BypassValidationRules__c = false,
ISPICKVAL(StageName , &quot;Opportunité perdue&quot;) 
 &amp;&amp; 
 ISPICKVAL( LossReason__c , &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>LossReason__c</errorDisplayField>
    <errorMessage>Un motif de perte doit être renseigné quand le statut de l&#39;opportunité est passé en &quot;perdue&quot;.</errorMessage>
</ValidationRule>