force-app/main/default/objects/Opportunity/listViews/Mes_opportunit_s_en_cours.listView-meta.xml
<ListView>
    <fullName>Mes_opportunit_s_en_cours</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Nurterring,Contrat signé,Opportunité perdue</value>
    </filters>
    <label>Mes opportunités en cours</label>
</ListView>